proper swagger
